fix: date parsing when range starts before today